# cmake_langx

./: LICENSE  README.md
app/: CMakeLists.txt  main.c
cmake/: CMakeDetermineXCompiler.cmake  CMakeLists.txt  CMakeTestXCompiler.cmake  CMakeXCompiler.cmake.in  CMakeXInformation.cmake
cmake/Compiler/: Windows-XC-X.cmake  XC.cmake
libc/: CMakeLists.txt  file.c
libx/: CMakeLists.txt  file.x
xtoolset/: xar  xc  xld  xranlib
